--- a/projects/js/todo-list/package.json
+++ b/projects/js/todo-list/package.json
@@ -1,19 +1,8 @@
 {
-  "name": "todo-list",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
   "scripts": {
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "jest"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "jest": "^30.0.0"
+  "jest": {
+    "testEnvironment": "node"
   }
 }
